--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -36,8 +36,9 @@
         
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
+        <li><%= link_to"Sign in", new_user_session_path %></li>
+          <li><%= link_to"About", about_path %></li>
+          <li class="dropdown">
           
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
