--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Content:</strong>
-  <%= @task.content %>
+  <strong>State:</strong>
+  <%= @task.state %>
 </p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
