--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,14 +1,8 @@
-
-<%= simple_form_for(@task) do |f| %>
+<%= simple_form_for(@task, html: {class: "form-signin"}) do |f| %>
   <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
-
-  <div class="form-inputs">
-    <%= f.input :content %>
-    <%= f.input :state %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
+  
+    <%= f.input :content, label: false, required: true, autofocus: true, input_html: {class: "form-control"}, placeholder: "Content" %>
+    
+    <%= f.button :submit, class: "btn btn-lg btn-danger btn-block" %>
+ 
 <% end %>
