--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Task</h1>
-
-<%= render 'form', task: @task %>
-
+<h1 class="text-center">New Task</h1>
+<div>
+<%= render 'form' %>
+</div>
 <%= link_to 'Back', tasks_path %>
